# midas-awkward-tutorial

./: .gitignore  README.md  postBuild  pyproject.toml  requirements.txt  start
.jupyter-config/: jupyter_server_config.py
data/: R366_0.fernet
notebooks/: 01-numpy.ipynb  02-awkward-array.ipynb  03-hist.ipynb  calibration.ipynb
